--- a/trunk/data/README
+++ b/trunk/data/README
@@ -29,6 +29,22 @@ Most starships come equipped with a warp drive.  Unfortunately they can only be 
 To engage a jump drive, position your ship inside and press 'j'.
 Regulations state that starships should be stopped before jumping-- disasters have resulted from starships travelling at any great speed into a jump point.
 
+------------------------------------------------
+Time Compression
+-----------------------------------------------
+Often interstellar travel requires going great distances. To facilitate this, we have provided time compression.  Press F9 to increase time compression to get where you're going.  Press F10 to drop out of time compression.  F10 will happen automatically if enemies are nearby.
+
+------------------------------------------------
+ReSpawn
+-----------------------------------------------
+If you sadly lose your life in combat you may respawn by pressing ':'
+A new starship will be created for you by Bob.
+
+-------------------------------------------------
+Transfer Command
+-------------------------------------------------
+if you wish to transfer command to another starship, simply press '[' to switch over.  This is useful if you have died and do not wish to call on Bob for help.
+
 -----------
  Controls:
 -----------
@@ -41,9 +57,7 @@ ENTER fire missile
 space Fire Guns
 backspace  stop
 TAB Afterburners
-
 j engage interstellar warp drive (use at clear blue balls)
-
 *,ins Spin Right
 /,del Spin Left
 ~ (hold down, engage shelton slide)
@@ -203,5 +217,7 @@ So that's how to use AI scripts.
 If you want to know more about writing actual maneuvers (like turnaway.xml  which as you can see is in the directory) please contact me at hellcatv@hotmail.com
 you need to have a heavy background in vector math.
 
-© 2001 Daniel Horn, Patrick Horn, Alan Shieh, and Aleksander Rawass
+© 2002 Daniel Horn, Patrick Horn, Alan Shieh, and Aleksander Rawass
+       Sabarok Aresh, Stefan Stapelberg
 
+© 2002 Graphic Art Daniel Aleksandrow, James Carthew, Jason Wizenreid, Warden, and many more that I do not have the brains to say right now...
