--- a/trunk/data/README
+++ b/trunk/data/README
@@ -220,4 +220,4 @@ you need to have a heavy background in vector math.
 © 2002 Daniel Horn, Patrick Horn, Alan Shieh, and Aleksander Rawass
        Sabarok Aresh, Stefan Stapelberg
 
-© 2002 Graphic Art Daniel Aleksandrow, James Carthew, Jason Wizenreid, Warden, and many more that I do not have the brains to say right now...
+© 2002 Graphic Art Daniel Aleksandrow, James Carthew, Jason Wizenreid, Warden, f109vampire and many more that I do not have the brains to say right now...
